--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,198 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --blue-1: #3c429e;
+  --blue-2: #4c52ad;
+  --yellow-1: #fac742;
+  --white:#fff;
+  --grey-1: #EDEDED;
+  --shadow-dark: rgba(0,0,0,0.3);
+  --shadow-light: rgba(255,255,255,0.1);
+}
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 16px;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--blue-1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  width: 500px;
+  height: 80vh;
+  background-color: var(--blue-2);
+  border-radius: 20px;
+  box-shadow: 10px 10px 10px var(--shadow-dark);
+
+}
+@media only screen and (max-width: 568px) {
+  .container {
+    width: 97%;
+    height: 90vh;
+    margin: 0 auto;
+  }
+
+  .weatherInfo {
+    font-size: 16px;
+    top: 10px;
+    left: 10px;
+  }
+
+  .location span {
+    font-size: 1.5rem;
+  }
+
+  .temperature {
+    font-size: 3em;
+  }
+
+  .more-info-label {
+    font-size: 1rem;
+    padding: 0;
+  }
+  .info-block-value{
+    font-size: 1rem;
+  }
+
+  .info-block {
+    flex-basis: 50%;
+  }
+}
+
+.upper-data{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.upper-data img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.weather-data {
+  position: relative;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background-color: var(--shadow-dark);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.weatherInfo{
+  color: white;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  font-size: 20px;
+}
+.lower-data{
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 50%;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.location {
+  color: var(--white);
+  text-align: center;
+
+  display: flex;
+  span{
+    font-size: 1.8rem;
+  }
+  img{
+    position: static;
+    width: 40px !important;
+    height: 40px;
+  }
+}
+
+.temperature {
+  color: var(--white);
+  font-size: 4em;
+  text-align: center;
+  font-weight: 900;
+}
+.more-info-label{
+  color: var(--white);
+}
+
+.more-info-container {
+  flex: 1;
+  background-color: var(--shadow-light);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  margin-top: 1em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.info-block{
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+}
+
+.info-block-label {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-block-label img {
+  width: 1.6em;
+}
+
+.info-block-label span {
+  color: var(--white);
+  font-size: 0.8em;
+}
+
+.info-block-value{
+  width: 50%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: var(--white);
+}
+
+.search {
+  margin-bottom: 1em;
+  text-align: center;
+}
+
+.search input {
+  background-color: var(--shadow-light);
+  outline: none;
+  border: none;
+  border-radius: 20px;
+  padding: 1em;
+  color: var(--grey-1);
+  text-align: center;
+  width: 300px;
+}
+
+//
