--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="search">
   <form #form="ngForm" (submit)="onSubmit()">
-    <input type="text" placeholder="Search city" name="cityName" [(ngModel)]="city">
+    <input type="text" placeholder="Search city"  [(ngModel)]="city">
   </form>
 </div>
 
