--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,20 @@
   --shadow-dark: rgba(0,0,0,0.3);
   --shadow-light: rgba(255,255,255,0.1);
 }
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #a9a9a9;
+}
+::-moz-placeholder { /* Firefox 19+ */
+  color: #a9a9a9;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #a9a9a9;
+}
+:-moz-placeholder { /* Firefox 18- */
+  color: #a9a9a9;
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -182,6 +196,9 @@ body{
 .search {
   margin-bottom: 1em;
   text-align: center;
+  P{
+    color: var(--white);
+  }
 }
 
 .search input {
