--- a/src/styles.scss
+++ b/src/styles.scss
@@ -7,6 +7,11 @@
   --shadow-dark: rgba(0,0,0,0.3);
   --shadow-light: rgba(255,255,255,0.1);
 }
+
+input[type=text]::placeholder {
+  color: #c1bbbb;
+}
+
 *{
   margin: 0;
   padding: 0;
