--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,17 @@
 <div class="search">
   <form #form="ngForm" (submit)="onSubmit()">
-    <input type="text" placeholder="Search city" [(ngModel)]="city">
+    <input type="text" placeholder="Search city" name="cityName" [(ngModel)]="city">
   </form>
 </div>
 
 <div class="container" *ngIf="weatherData">
   <div class="upper-data">
-    <img src="{{imagePath}}">
+    <img [src]="imagePath">
   <div class="weather-data">
     <p class="weatherInfo">{{weatherInfo}}</p>
-    <div class="location"><span>{{weatherData.name}}</span> <img src="{{iconUrl}}" alt="image"/></div>
+    <div class="location"><span>{{weatherData.name}}</span> <img [src]="iconUrl" alt="image"/></div>
     <div class="temperature">
       {{weatherData.main.temp | number: '1.0-0'}}°C
-
     </div>
   </div>
 </div>
@@ -27,7 +26,7 @@
           <span>min</span>
         </div>
         <div class="info-block-value">
-          {{weatherData.main.temp_min | number: '1.0-0'}}°C
+          {{weatherData.main.temp_min}}°C
         </div>
       </div>
       <div class="info-block">
@@ -36,7 +35,7 @@
           <span>max</span>
         </div>
         <div class="info-block-value">
-          {{weatherData.main.temp_max | number: '1.0-0'}}°C
+          {{weatherData.main.temp_max}}°C
         </div>
       </div>
       <div class="info-block">
